<resources>
    <string name="app_name">App1</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="last_name">Last Name:</string>
    <string name="middle_name">Middle Name:</string>
    <string name="first_name">First Name:</string>
    <string name="login"> is logged in!</string>
    <string name="restart">Restart</string>
    <string name="upload_profpic">Upload Profile Picture</string>
</resources>